--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "dev": "concurrently \"bun --cwd backend start\" \"bun --cwd frontend dev\""
+        "dev": "concurrently \"bun --cwd backend start\" \"bun --cwd frontend dev\"",
+        "prod": "concurrently \"bun --cwd backend start\" \"bun --cwd frontend preveiw\""
     },
     "devDependencies": {
         "concurrently": "^8.2.2"
