--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-    "name": "wdpcm-runner",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "dev": "concurrently \"bun --cwd backend start\" \"bun --cwd frontend dev\"",
-        "prod": "concurrently \"bun --cwd backend start\" \"bun --cwd frontend preview\""
-    },
-    "devDependencies": {
-        "concurrently": "^8.2.2"
-    }
+  "name": "wdpcm-runner",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "concurrently \"bun --cwd backend start\" \"bun --cwd frontend dev\"",
+    "prod": "concurrently \"bun --cwd backend start\" \"bun --cwd frontend start\"",
+    "initiate": "cd frontend && bun install && bun run build && cd ../backend && bun install"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  },
+  "module": "index.ts",
+  "type": "module",
+  "peerDependencies": {
+    "typescript": "^5"
+  }
 }
