--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"bun --cwd backend --hot start\" \"bun --cwd frontend dev\"",
-    "prod": "concurrently \"bun --cwd backend start\" \"bun --cwd frontend preview\"",
-    "initiate": "cd frontend && bun install && bun run build && cd ../backend && bun install"
+    "dev": "concurrently \"cd backend && npm run dev\" \"cd frontend && bun dev\"",
+    "prod": "concurrently \"cd backend && npm run start\" \"cd frontend && bun preview\"",
+    "initiate": "cd frontend && bun install && bun run build && cd ../backend && npm install && npm run build"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
