--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,20 @@
 {
+  "name": "backend",
+  "type": "module",
   "scripts": {
-    "start": "bun run server.ts"
-  },
-  "devDependencies": {
-    "typescript": "^5.8.3",
-    "@types/bun": "latest"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1"
+    "@hono/node-server": "^1.14.4",
+    "hono": "^4.7.11",
+    "node-pty": "^1.0.0",
+    "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.3"
   }
 }
