--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "@hono/node-server": "^1.14.4",
     "hono": "^4.7.11",
     "node-pty": "^1.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
